--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: glshlee blog
+subtitle: subtitle test
 email: glshlee@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -33,9 +34,30 @@ github_username:  jekyll
 #theme: minimal-mistakes-jekyll
 remote_theme: mmistakes/minimal-mistakes@4.26.1
 minimal_mistakes_skin: mint
+locale: "ko-KR"
+breadcrumbs: true
+words_per_minute: 200
+enable_copy_code_button: true
+
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+
+# Defaults
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
+      date_format: "%Y-%m-%d"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
